fix icon width on smaller screens

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -880,6 +880,9 @@
                         width: @variables_icon_width;
                         height: @variables_icon_height;
                     }
+                    .lucide * {
+                        stroke-width: 1.5;
+                    }
                 }
             }
             a.cp-toolbar-link-logo > svg:nth-of-type(2){ display: none; }
